Fase4/src/c_ast_descendente/ConstructorASTsTiny.java
/* Generated By:JavaCC: Do not edit this line. ConstructorASTsTiny.java */
        package c_ast_descendente;

import asint.ClaseSemanticaTiny;
import asint.SintaxisAbstractaTiny.*;

public class ConstructorASTsTiny implements ConstructorASTsTinyConstants {
           private ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

  final public Prog analiza() throws ParseException {
    trace_call("analiza");
    try {
       Prog prog;
      prog = programa();
      jj_consume_token(0);
             {if (true) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
  }

  final public Prog programa() throws ParseException {
    trace_call("programa");
    try {
      Bloque bloque;
      bloque = bloque();
            {if (true) return sem.prog(bloque);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("programa");
    }
  }

  final public Bloque bloque() throws ParseException {
    trace_call("bloque");
    try {
          LDecsOpt decs_opt; LInsOpt ins_opt;
      jj_consume_token(35);
      decs_opt = declaraciones_opt();
      ins_opt = instrucciones_opt();
      jj_consume_token(36);
                  {if (true) return sem.bloque(decs_opt, ins_opt);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bloque");
    }
  }

  final public LDecsOpt declaraciones_opt() throws ParseException {
    trace_call("declaraciones_opt");
    try {
         LDecs decs;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case int_:
      case real:
      case bool:
      case string:
      case proc:
      case struct:
      case type:
      case identificador:
      case 45:
        decs = lista_decs();
        jj_consume_token(37);
                  {if (true) return sem.si_decs(decs);}
        break;
      default:
        jj_la1[0] = jj_gen;
         {if (true) return sem.no_decs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaraciones_opt");
    }
  }

  final public LInsOpt instrucciones_opt() throws ParseException {
    trace_call("instrucciones_opt");
    try {
         LIns ins;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case if_:
      case while_:
      case new_:
      case delete:
      case read:
      case write:
      case nl:
      case call:
      case 35:
      case 48:
        ins = lista_ins();
                  {if (true) return sem.si_ins(ins);}
        break;
      default:
        jj_la1[1] = jj_gen;
         {if (true) return sem.no_ins();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instrucciones_opt");
    }
  }

  final public LDecs lista_decs() throws ParseException {
    trace_call("lista_decs");
    try {
      LDecs decs;Dec dec;
      dec = declaracion();
      decs = rlista_decs(sem.una_dec(dec));
        {if (true) return  decs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_decs");
    }
  }

  final public LDecs rlista_decs(LDecs rdecs) throws ParseException {
    trace_call("rlista_decs");
    try {
          LDecs decs; Dec dec;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        jj_consume_token(38);
        dec = declaracion();
        decs = rlista_decs(sem.muchas_decs(rdecs,dec));
            {if (true) return decs;}
        break;
      default:
        jj_la1[2] = jj_gen;
                  {if (true) return rdecs;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_decs");
    }
  }

  final public Dec declaracion() throws ParseException {
    trace_call("declaracion");
    try {
   Token id;Token a; Tipo t; PFormOpt pform_opt; Bloque bloque;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case int_:
      case real:
      case bool:
      case string:
      case struct:
      case identificador:
      case 45:
        t = tipo();
        id = jj_consume_token(identificador);
      {if (true) return (Dec)sem.dec_var(sem.StringLocalizado(id.image, id.beginLine, id.beginColumn), t);}
        break;
      case type:
        a = jj_consume_token(type);
        t = tipo();
        id = jj_consume_token(identificador);
          {if (true) return (Dec)sem.dec_tipo(sem.StringLocalizado(id.image, id.beginLine, id.beginColumn),t);}
        break;
      case proc:
        a = jj_consume_token(proc);
        id = jj_consume_token(identificador);
        jj_consume_token(39);
        pform_opt = parametrosFormales_opt();
        jj_consume_token(40);
        bloque = bloque();
         {if (true) return (Dec)sem.dec_proc(sem.StringLocalizado(id.image, id.beginLine, id.beginColumn), pform_opt, bloque);}
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion");
    }
  }

  final public PFormOpt parametrosFormales_opt() throws ParseException {
    trace_call("parametrosFormales_opt");
    try {
   LPForm params;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case int_:
      case real:
      case bool:
      case string:
      case struct:
      case identificador:
      case 45:
        params = lista_pforms();
          {if (true) return sem.si_pforms(params);}
        break;
      default:
        jj_la1[4] = jj_gen;
         {if (true) return sem.no_pforms();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametrosFormales_opt");
    }
  }

  final public LPForm lista_pforms() throws ParseException {
    trace_call("lista_pforms");
    try {
      LPForm params; Pform param;
      param = parametroFormal();
      params = rlista_pforms(sem.un_pform(param));
        {if (true) return  params;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_pforms");
    }
  }

  final public LPForm rlista_pforms(LPForm rparams) throws ParseException {
    trace_call("rlista_pforms");
    try {
          LPForm params; Pform param;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        jj_consume_token(41);
        param = parametroFormal();
        params = rlista_pforms(sem.muchos_pforms(rparams,param));
            {if (true) return params;}
        break;
      default:
        jj_la1[5] = jj_gen;
                  {if (true) return rparams;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_pforms");
    }
  }

  final public Pform parametroFormal() throws ParseException {
    trace_call("parametroFormal");
    try {
          Tipo t;
      t = tipo();
                  {if (true) return ref(t);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametroFormal");
    }
  }

  final public Pform ref(Tipo t) throws ParseException {
    trace_call("ref");
    try {
   Token id;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 42:
        jj_consume_token(42);
        id = jj_consume_token(identificador);
          {if (true) return (Pform)sem.pfref(t, sem.StringLocalizado(id.image, id.beginLine, id.beginColumn));}
        break;
      case identificador:
        id = jj_consume_token(identificador);
         {if (true) return (Pform)sem.pfnoref(t, sem.StringLocalizado(id.image, id.beginLine, id.beginColumn));}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ref");
    }
  }

  final public Tipo tipo() throws ParseException {
    trace_call("tipo");
    try {
         Tipo t1; Tipo t;
      t1 = tipo1();
      t = rtipo(t1);
          {if (true) return t;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo");
    }
  }

  final public Tipo rtipo(Tipo r) throws ParseException {
    trace_call("rtipo");
    try {
         Token litEntero; Tipo t;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 43:
        jj_consume_token(43);
        litEntero = jj_consume_token(literalEntero);
        jj_consume_token(44);
        t = rtipo((Tipo)sem.array(r, sem.StringLocalizado(litEntero.image, litEntero.beginLine, litEntero.beginColumn)));
           {if (true) return t;}
        break;
      default:
        jj_la1[7] = jj_gen;
           {if (true) return r;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rtipo");
    }
  }

  final public Tipo tipo1() throws ParseException {
    trace_call("tipo1");
    try {
   Tipo t1; Tipo t2;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 45:
        jj_consume_token(45);
        t1 = tipo1();
      {if (true) return sem.puntero(t1);}
        break;
      case int_:
      case real:
      case bool:
      case string:
      case struct:
      case identificador:
        t2 = tipo2();
          {if (true) return t2;}
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo1");
    }
  }

  final public Tipo tipo2() throws ParseException {
    trace_call("tipo2");
    try {
     Token t; LCamp campos;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case identificador:
        t = jj_consume_token(identificador);
        {if (true) return (Tipo)sem.iden(sem.StringLocalizado(t.image, t.beginLine, t.beginColumn));}
        break;
      case struct:
        t = jj_consume_token(struct);
        jj_consume_token(46);
        campos = lista_campos();
        jj_consume_token(47);
        {if (true) return (Tipo)sem.struct(campos);}
        break;
      case int_:
        t = jj_consume_token(int_);
        {if (true) return (Tipo)sem.lit_ent();}
        break;
      case real:
        t = jj_consume_token(real);
        {if (true) return (Tipo)sem.lit_real();}
        break;
      case bool:
        t = jj_consume_token(bool);
        {if (true) return (Tipo)sem.lit_bool();}
        break;
      case string:
        t = jj_consume_token(string);
        {if (true) return (Tipo)sem.lit_string();}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo2");
    }
  }

  final public LCamp lista_campos() throws ParseException {
    trace_call("lista_campos");
    try {
      LCamp campos;Camp campo;
      campo = campo();
      campos = rlista_campos(sem.un_camp(campo));
        {if (true) return  campos;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_campos");
    }
  }

  final public LCamp rlista_campos(LCamp rcampos) throws ParseException {
    trace_call("rlista_campos");
    try {
          LCamp campos; Camp campo;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        jj_consume_token(41);
        campo = campo();
        campos = rlista_campos(sem.muchos_camp(rcampos,campo));
            {if (true) return campos;}
        break;
      default:
        jj_la1[10] = jj_gen;
                  {if (true) return rcampos;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_campos");
    }
  }

  final public Camp campo() throws ParseException {
    trace_call("campo");
    try {
         Tipo t;Token id;
      t = tipo();
      id = jj_consume_token(identificador);
            {if (true) return (Camp)sem.camp(t, sem.StringLocalizado(id.image, id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("campo");
    }
  }

  final public LIns lista_ins() throws ParseException {
    trace_call("lista_ins");
    try {
      LIns ins; Ins in;
      in = instruccion();
      ins = rlista_ins(sem.una_ins(in));
        {if (true) return  ins;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_ins");
    }
  }

  final public LIns rlista_ins(LIns rins) throws ParseException {
    trace_call("rlista_ins");
    try {
          LIns  ins; Ins in;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        jj_consume_token(38);
        in = instruccion();
        ins = rlista_ins(sem.muchas_ins(rins,in));
            {if (true) return ins;}
        break;
      default:
        jj_la1[11] = jj_gen;
                  {if (true) return rins;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_ins");
    }
  }

  final public Ins instruccion() throws ParseException {
    trace_call("instruccion");
    try {
   Token t, t1; Exp e0; Bloque bloque, bloque1; Token id; LPRealOpt params_opt;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 48:
        jj_consume_token(48);
        e0 = e0();
      {if (true) return sem.ins_asig(e0);}
        break;
      case if_:
        t = jj_consume_token(if_);
        e0 = e0();
        bloque = bloque();
      {if (true) return restoIf(e0, bloque);}
        break;
      case while_:
        t = jj_consume_token(while_);
        e0 = e0();
        bloque = bloque();
     {if (true) return sem.ins_while(e0, bloque);}
        break;
      case read:
        t = jj_consume_token(read);
        e0 = e0();
     {if (true) return sem.ins_read(e0);}
        break;
      case write:
        t = jj_consume_token(write);
        e0 = e0();
     {if (true) return sem.ins_write(e0);}
        break;
      case nl:
        t = jj_consume_token(nl);
     {if (true) return sem.ins_nl();}
        break;
      case new_:
        t = jj_consume_token(new_);
        e0 = e0();
     {if (true) return sem.ins_new(e0);}
        break;
      case delete:
        t = jj_consume_token(delete);
        e0 = e0();
     {if (true) return sem.ins_delete(e0);}
        break;
      case call:
        t = jj_consume_token(call);
        id = jj_consume_token(identificador);
        jj_consume_token(39);
        params_opt = parametrosReales_opt();
        jj_consume_token(40);
     {if (true) return (Ins)sem.ins_call(sem.StringLocalizado(id.image, id.beginLine, id.beginColumn), params_opt);}
        break;
      case 35:
        bloque = bloque();
          {if (true) return sem.ins_bloque(bloque);}
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instruccion");
    }
  }

  final public Ins restoIf(Exp e0, Bloque bloque) throws ParseException {
    trace_call("restoIf");
    try {
     Token t; Bloque bloque1;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case else_:
        t = jj_consume_token(else_);
        bloque1 = bloque();
       {if (true) return sem.ins_if_else(e0, bloque, bloque1);}
        break;
      default:
        jj_la1[13] = jj_gen;
       {if (true) return sem.ins_if(e0, bloque);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("restoIf");
    }
  }

  final public LPRealOpt parametrosReales_opt() throws ParseException {
    trace_call("parametrosReales_opt");
    try {
         LPReal params;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case null_:
      case true_:
      case false_:
      case identificador:
      case literalEntero:
      case literalReal:
      case literalCadena:
      case 39:
      case 51:
      case 62:
        params = lista_preal();
                  {if (true) return sem.si_preal(params);}
        break;
      default:
        jj_la1[14] = jj_gen;
         {if (true) return sem.no_preal();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametrosReales_opt");
    }
  }

  final public LPReal lista_preal() throws ParseException {
    trace_call("lista_preal");
    try {
      LPReal params; Exp par;
      par = e0();
      params = rlista_preal(sem.un_preal(par));
        {if (true) return  params;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_preal");
    }
  }

  final public LPReal rlista_preal(LPReal rparams) throws ParseException {
    trace_call("rlista_preal");
    try {
         LPReal params; Exp par;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        jj_consume_token(41);
        par = e0();
        params = rlista_preal(sem.muchos_preal(rparams,par));
            {if (true) return params;}
        break;
      default:
        jj_la1[15] = jj_gen;
                  {if (true) return rparams;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_preal");
    }
  }

  final public Exp e0() throws ParseException {
    trace_call("e0");
    try {
     Exp e0,e1;
      e1 = e1();
      e0 = re0(e1);
          {if (true) return e0;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("e0");
    }
  }

  final public Exp re0(Exp e1) throws ParseException {
    trace_call("re0");
    try {
   Exp e0;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        jj_consume_token(49);
        e0 = e0();
     {if (true) return sem.asig(e1, e0);}
        break;
      default:
        jj_la1[16] = jj_gen;
         {if (true) return e1;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("re0");
    }
  }

  final public Exp e1() throws ParseException {
    trace_call("e1");
    try {
         Exp e1, e2;
      e2 = e2();
      e1 = re1(e2);
                 {if (true) return e1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("e1");
    }
  }

  final public Exp re1(Exp re2) throws ParseException {
    trace_call("re1");
    try {
   String op1; Exp e2, e0;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
      case 54:
      case 55:
      case 56:
      case 57:
      case 58:
        op1 = op1();
        e2 = e2();
        e0 = re1(sem.mkop2(op1, re2,e2));
     {if (true) return e0;}
        break;
      default:
        jj_la1[17] = jj_gen;
          {if (true) return  re2;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("re1");
    }
  }
